third_party/blink/web_tests/paint/invalidation/svg/absolute-sized-content-with-resources.xhtml
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<script src="../resources/text-based-repaint.js"></script>
</head>
<body onload="runRepaintAndPixelTest()">
    <p>The svg area contained in the div element (red box), should contain four masked circles, that do not pixelate after resizing</p>
    <div id="contentBox" style="width: 100px; height: 400px; border: 1px solid red;">
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="20 15 60 50" height="100%" width="100%">
        <defs>
            <linearGradient id="gradient" x1="0" x2="1" y1="0" y2="1">
                <stop offset="0" stop-color="blue" />
                <stop offset="1" stop-color="red" />
            </linearGradient>

            <mask id="mask" maskUnits="userSpaceOnUse" x="25" y="20" width="50" height="40">
                <circle cx="25" cy="20" r="20" fill="#ffffff" />
                <circle cx="25" cy="60" r="20" fill="#ffffff" />
                <circle cx="75" cy="20" r="20" fill="#ffffff" />
                <circle cx="75" cy="60" r="20" fill="#ffffff" />
            </mask>
        </defs>

        <g fill="url(#gradient)">
            <rect width="100" height="80" mask="url(#mask)" />
        </g>
        </svg>
    </div>
    <script>
        function repaintTest() {
            document.getElementById("contentBox").style.setProperty("width", "400px");
        }
    </script>
</body>
</html>
